--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "isolatedModules": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "server"],
+  "include": ["src", "api/server"],
   "references": []
 }
