--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,12 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-  "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "api/server"],
+  "include": ["src", "api/**/*.ts", "server/**/*.ts", "openai.json"],
   "references": []
 }
