--- a/package.json
+++ b/package.json
@@ -1,29 +1,24 @@
 {
-  "name": "ex-mcp-react",
+  "name": "ex-mcp",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-  "mcp-server": "tsx server/mcp-server.ts",
-  "mcp-http": "tsx server/mcp-http-server.ts"
-  ,"mcp-http-simple": "tsx server/mcp-http-simple.ts"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-  "@modelcontextprotocol/sdk": "^1.21.1",
-  "zod": "^3.23.8"
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "next": "16.0.1"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "typescript": "^5.3.0",
-    "tsx": "^4.1.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@types/node": "^20.0.0"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.1"
   }
 }
